fix database name - properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/webservice-sprinbootbr
+spring.datasource.url=jdbc:postgresql://localhost:5432/webservice-springbootbr
 spring.datasource.username=postgres
 spring.datasource.password=1234567
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#Atualizar o banco quando inicicar a aplicação
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
